--- a/index.html
+++ b/index.html
@@ -1,12 +1,147 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ohmyfood</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+            integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+            crossorigin="anonymous" referrerpolicy="no-referrer">
+        <title>Ohmyfood</title>
+        <link rel="stylesheet" href="sass/style.scss">
+    </head>
+
+    <body>
+        <div class="loader"></div>
+
+        <header class="header">
+            <h1 class="header__logo">
+                <img class="header__logo--img" src="./assets/logo/ohmyfood.png" alt="Ohmyfood">
+            </h1>
+        </header>
+
+        <main class="main">
+            <div class="location">
+                <i class="fa-solid fa-location-dot"></i>
+                <p class="location__city"> Paris, Belleville</p>
+            </div>
+
+            <section class="section section__booking">
+                <h2 class="booking--title">Réservez le menu qui vous convient</h2>
+                <p class="booking--description">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
+                <button class="booking--button">Explorer nos restaurants</button>
+            </section>
+
+            <section class="section section__functioning">
+                <h3 class="functioning--title">Fonctionnement</h3>
+                <ol class="functioning--list">
+                    <li class="functioning--list__item">
+                        <i class="fa-solid fa-mobile-screen-button"></i>
+                        <p class="functioning__item--text">Choisissez un restaurant</p>
+                    </li>
+                    <li class="functioning--list__item">
+                        <i class="fa-solid fa-list"></i>
+                        <p class="functioning__item--text">Composez votre menu</p>
+                    </li>
+                    <li class="functioning--list__item">
+                        <i class="fa-solid fa-store"></i>
+                        <p class="functioning__item--text">Dégustez au restaurant</p>
+                    </li>
+                </ol>
+            </section>
+
+            <section class="section section__restaurants">
+                <h3 class="restaurants--title">Restaurants</h3>
+                <article class="restaurants--card">
+                    <a href="" class="restaurants--card__link">
+                        <div class="restaurants--card__figure">
+                            <img class="card__figure--img" src="./assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                            <span class="card__figure--tag">Nouveau</span>
+                        </div>
+                        <div class="restaurants--card__description">
+                            <div class="card__description--text">
+                                <h4 class="card__title">La palette du goût</h4>
+                                <p class="card__subtitle">Ménilmontant</p>
+                            </div>
+                            <i class="fa-regular fa-heart"></i>
+                        </div>
+                    </a>
+                </article>
+
+                <article class="restaurants--card">
+                    <a href="" class="restaurants--card__link">
+                        <div class="restaurants--card__figure">
+                            <img class="card__figure--img" src="./assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                            <span class="card__figure--tag">Nouveau</span>
+                        </div>
+                        <div class="restaurants--card__description">
+                            <div class="card__description--text">
+                                <h4 class="card__title">La note enchantée</h4>
+                                <p class="card__subtitle">Charonne</p>
+                            </div>
+                            <i class="fa-regular fa-heart"></i>
+                        </div>
+                    </a>
+                </article>
+
+                <article class="restaurants--card">
+                    <a href="" class="restaurants--card__link">
+                        <div class="restaurants--card__figure">
+                            <img class="card__figure--img" src="./assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+                        </div>
+                        <div class="restaurants--card__description">
+                            <div class="card__description--text">
+                                <h4 class="card__title">À la française</h4>
+                                <p class="card__subtitle">Cité Rouge</p>
+                            </div>
+                            <i class="fa-regular fa-heart"></i>
+                        </div>
+                    </a>
+                </article>
+
+                <article class="restaurants--card">
+                    <a href="" class="restaurants--card__link">
+                        <div class="restaurants--card__figure">
+                            <img class="card__figure--img" src="./assets/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+                        </div>
+                        <div class="restaurants--card__description">
+                            <div class="card__description--text">
+                                <h4 class="card__title">Le délice des sens</h4>
+                                <p class="card__subtitle">Folie-Méricourt</p>
+                            </div>
+                            <i class="fa-regular fa-heart"></i>
+                        </div>
+                    </a>
+                </article>
+            </section>
+        </main>
+
+        <footer class="footer">
+            <div class="footer__logo">ohmyfood</div>
+            <ul class="footer--list">
+                <li class="footer--list__item">
+                    <i class="fa-solid fa-utensils"></i>
+                    <p class="footer__item--text">Proposer un restaurant</p>
+                </li>
+            </ul>
+
+            <ul class="footer--list">
+                <li class="footer--list__item">
+                    <i class="fa-solid fa-handshake-angle"></i>
+                    <p class="footer__item--text">Devenir partenaire</p>
+                </li>
+            </ul>
+
+            <ul class="footer--list">
+                <li class="footer--list__item">
+                    <p class="footer__item--text">Mentions légales</p>
+                </li>
+            </ul>
+
+            <ul class="footer--list">
+                <li class="footer--list__item">
+                    <p class="footer__item--text">Contact</p>
+                </li>
+            </ul>
+        </footer>
+    </body>
 </html>
