--- a/index.html
+++ b/index.html
@@ -7,23 +7,30 @@
             integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
             crossorigin="anonymous" referrerpolicy="no-referrer">
         <title>Ohmyfood</title>
-        <link rel="stylesheet" href="sass/style.scss">
+        <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
-        <div class="loader"></div>
+        <div class="container">
+
+        <div class="container__loader">
+            <div class="loader__circle"></div>
+            <p class="loader__text">ohmyfood</p>
+        </div>
 
         <header class="header">
             <h1 class="header__logo">
-                <img class="header__logo--img" src="./assets/logo/ohmyfood.png" alt="Ohmyfood">
+                <a href="index.html">
+                    <img class="header__logo--img" src="./assets/logo/ohmyfood.png" alt="Ohmyfood">
+                </a>
             </h1>
         </header>
 
         <main class="main">
-            <div class="location">
+            <form class="location">
                 <i class="fa-solid fa-location-dot"></i>
-                <p class="location__city"> Paris, Belleville</p>
-            </div>
+                <input type="search" id="location" name="location" placeholder="Paris, Belleville"/>
+            </form>
 
             <section class="section section__booking">
                 <h2 class="booking--title">Réservez le menu qui vous convient</h2>
@@ -35,16 +42,22 @@
                 <h3 class="functioning--title">Fonctionnement</h3>
                 <ol class="functioning--list">
                     <li class="functioning--list__item">
-                        <i class="fa-solid fa-mobile-screen-button"></i>
-                        <p class="functioning__item--text">Choisissez un restaurant</p>
+                        <button class="functioning--button">
+                            <i class="fa-solid fa-mobile-screen-button"></i>
+                            <p class="functioning__item--text">Choisissez un restaurant</p>
+                        </button>
                     </li>
                     <li class="functioning--list__item">
-                        <i class="fa-solid fa-list"></i>
-                        <p class="functioning__item--text">Composez votre menu</p>
+                        <button class="functioning--button">
+                            <i class="fa-solid fa-list"></i>
+                            <p class="functioning__item--text">Composez votre menu</p>
+                        </button>
                     </li>
                     <li class="functioning--list__item">
-                        <i class="fa-solid fa-store"></i>
-                        <p class="functioning__item--text">Dégustez au restaurant</p>
+                        <button class="functioning--button">
+                            <i class="fa-solid fa-store"></i>
+                            <p class="functioning__item--text">Dégustez au restaurant</p>
+                        </button>
                     </li>
                 </ol>
             </section>
@@ -52,7 +65,7 @@
             <section class="section section__restaurants">
                 <h3 class="restaurants--title">Restaurants</h3>
                 <article class="restaurants--card">
-                    <a href="" class="restaurants--card__link">
+                    <a href="restaurants/lapalettedugout.html" class="restaurants--card__link">
                         <div class="restaurants--card__figure">
                             <img class="card__figure--img" src="./assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
                             <span class="card__figure--tag">Nouveau</span>
@@ -62,13 +75,17 @@
                                 <h4 class="card__title">La palette du goût</h4>
                                 <p class="card__subtitle">Ménilmontant</p>
                             </div>
-                            <i class="fa-regular fa-heart"></i>
+                            <input type="checkbox" class="heart-checkbox" id="heartCheckbox1">
+                            <label for="heartCheckbox1">
+                                <i class="far fa-heart heart__nocheck"></i>
+                                <i class="fas fa-solid fa-heart heart__check"></i>
+                            </label>
                         </div>
                     </a>
                 </article>
 
                 <article class="restaurants--card">
-                    <a href="" class="restaurants--card__link">
+                    <a href="restaurants/lanoteenchantee.html" class="restaurants--card__link">
                         <div class="restaurants--card__figure">
                             <img class="card__figure--img" src="./assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
                             <span class="card__figure--tag">Nouveau</span>
@@ -78,13 +95,17 @@
                                 <h4 class="card__title">La note enchantée</h4>
                                 <p class="card__subtitle">Charonne</p>
                             </div>
-                            <i class="fa-regular fa-heart"></i>
+                            <input type="checkbox" class="heart-checkbox" id="heartCheckbox2">
+                            <label for="heartCheckbox2">
+                                <i class="far fa-heart heart__nocheck"></i>
+                                <i class="fas fa-solid fa-heart heart__check"></i>
+                            </label>
                         </div>
                     </a>
                 </article>
 
                 <article class="restaurants--card">
-                    <a href="" class="restaurants--card__link">
+                    <a href="restaurants/alafrancaise.html" class="restaurants--card__link">
                         <div class="restaurants--card__figure">
                             <img class="card__figure--img" src="./assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
                         </div>
@@ -93,13 +114,17 @@
                                 <h4 class="card__title">À la française</h4>
                                 <p class="card__subtitle">Cité Rouge</p>
                             </div>
-                            <i class="fa-regular fa-heart"></i>
+                            <input type="checkbox" class="heart-checkbox" id="heartCheckbox3">
+                            <label for="heartCheckbox3">
+                                <i class="far fa-heart heart__nocheck"></i>
+                                <i class="fas fa-solid fa-heart heart__check"></i>
+                            </label>
                         </div>
                     </a>
                 </article>
 
                 <article class="restaurants--card">
-                    <a href="" class="restaurants--card__link">
+                    <a href="restaurants/ledelicedessens.html" class="restaurants--card__link">
                         <div class="restaurants--card__figure">
                             <img class="card__figure--img" src="./assets/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                         </div>
@@ -108,7 +133,11 @@
                                 <h4 class="card__title">Le délice des sens</h4>
                                 <p class="card__subtitle">Folie-Méricourt</p>
                             </div>
-                            <i class="fa-regular fa-heart"></i>
+                            <input type="checkbox" class="heart-checkbox" id="heartCheckbox4">
+                            <label for="heartCheckbox4">
+                                <i class="far fa-heart heart__nocheck"></i>
+                                <i class="fas fa-solid fa-heart heart__check"></i>
+                            </label>
                         </div>
                     </a>
                 </article>
@@ -122,26 +151,23 @@
                     <i class="fa-solid fa-utensils"></i>
                     <p class="footer__item--text">Proposer un restaurant</p>
                 </li>
-            </ul>
 
-            <ul class="footer--list">
                 <li class="footer--list__item">
                     <i class="fa-solid fa-handshake-angle"></i>
                     <p class="footer__item--text">Devenir partenaire</p>
                 </li>
-            </ul>
 
-            <ul class="footer--list">
                 <li class="footer--list__item">
                     <p class="footer__item--text">Mentions légales</p>
                 </li>
-            </ul>
 
-            <ul class="footer--list">
                 <li class="footer--list__item">
-                    <p class="footer__item--text">Contact</p>
+                    <a href="mailto:contact@ohmyfood.fr">
+                        <p class="footer__item--text">Contact</p>
+                    </a>
                 </li>
             </ul>
         </footer>
+        </div>
     </body>
 </html>
