--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
             crossorigin="anonymous" referrerpolicy="no-referrer">
         <title>Ohmyfood</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/home.css">
     </head>
 
     <body>
@@ -19,27 +19,27 @@
         </div>
 
         <header class="header">
-            <h1 class="header__logo">
+            <div class="header__logo">
                 <a href="index.html">
-                    <img class="header__logo--img" src="./assets/logo/ohmyfood.png" alt="Ohmyfood">
+                    ohmyfood
                 </a>
-            </h1>
+            </div>
         </header>
 
         <main class="main">
-            <form class="location">
+            <div class="location">
                 <i class="fa-solid fa-location-dot"></i>
-                <input type="search" id="location" name="location" placeholder="Paris, Belleville"/>
-            </form>
+                <input class="location__name" type="text" id="location" name="location" placeholder="Paris, Belleville"/>
+            </div>
 
             <section class="section section__booking">
-                <h2 class="booking--title">Réservez le menu qui vous convient</h2>
+                <h1 class="booking--title">Réservez le menu qui vous convient</h1>
                 <p class="booking--description">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
                 <button class="booking--button">Explorer nos restaurants</button>
             </section>
 
             <section class="section section__functioning">
-                <h3 class="functioning--title">Fonctionnement</h3>
+                <h2 class="functioning--title">Fonctionnement</h2>
                 <ol class="functioning--list">
                     <li class="functioning--list__item">
                         <button class="functioning--button">
@@ -63,84 +63,88 @@
             </section>
 
             <section class="section section__restaurants">
-                <h3 class="restaurants--title">Restaurants</h3>
-                <article class="restaurants--card">
-                    <a href="restaurants/lapalettedugout.html" class="restaurants--card__link">
-                        <div class="restaurants--card__figure">
-                            <img class="card__figure--img" src="./assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
-                            <span class="card__figure--tag">Nouveau</span>
-                        </div>
-                        <div class="restaurants--card__description">
-                            <div class="card__description--text">
-                                <h4 class="card__title">La palette du goût</h4>
-                                <p class="card__subtitle">Ménilmontant</p>
-                            </div>
-                            <input type="checkbox" class="heart-checkbox" id="heartCheckbox1">
-                            <label for="heartCheckbox1">
-                                <i class="far fa-heart heart__nocheck"></i>
-                                <i class="fas fa-solid fa-heart heart__check"></i>
-                            </label>
-                        </div>
-                    </a>
-                </article>
+                <h2 class="restaurants--title">Restaurants</h2>
 
-                <article class="restaurants--card">
-                    <a href="restaurants/lanoteenchantee.html" class="restaurants--card__link">
-                        <div class="restaurants--card__figure">
-                            <img class="card__figure--img" src="./assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
-                            <span class="card__figure--tag">Nouveau</span>
-                        </div>
-                        <div class="restaurants--card__description">
-                            <div class="card__description--text">
-                                <h4 class="card__title">La note enchantée</h4>
-                                <p class="card__subtitle">Charonne</p>
+                <div class="restaurants--card">
+                    <article class="cards">
+                        <a href="restaurants/lapalettedugout.html" class="restaurants--card__link">
+                            <div class="restaurants--card__figure">
+                                <img class="card__figure--img" src="./assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                                <span class="card__figure--tag">Nouveau</span>
                             </div>
-                            <input type="checkbox" class="heart-checkbox" id="heartCheckbox2">
-                            <label for="heartCheckbox2">
-                                <i class="far fa-heart heart__nocheck"></i>
-                                <i class="fas fa-solid fa-heart heart__check"></i>
-                            </label>
-                        </div>
-                    </a>
-                </article>
+                            <div class="restaurants--card__description">
+                                <div class="card__description--text">
+                                    <h3 class="card__title">La palette du goût</h3>
+                                    <p class="card__subtitle">Ménilmontant</p>
+                                </div>
+                                <input type="checkbox" class="heart-checkbox" id="heartCheckbox1">
+                                <label for="heartCheckbox1">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="21" viewBox="0 0 22 21" fill="none">
+                                        <path d="M12.2208 2.40551L12.2206 2.40576L11.3741 3.35732L11.0005 3.77727L10.627 3.35732L9.78047 2.40576L9.77992 2.40514C7.78271 0.152585 4.59762 -0.169649 2.47664 1.80201C-0.0175439 4.1245 -0.15494 8.32357 2.0848 10.8495L10.399 20.2148C10.399 20.2149 10.399 20.2149 10.3991 20.2149C10.7372 20.5955 11.2595 20.5955 11.5977 20.2149C11.5977 20.2149 11.5978 20.2149 11.5978 20.2148L19.9122 10.8493L19.9123 10.8492C22.1559 8.32335 22.0186 4.12461 19.5245 1.80213L12.2208 2.40551ZM12.2208 2.40551C14.2226 0.15233 17.4035 -0.169452 19.5243 1.80187L12.2208 2.40551Z" stroke="#101010"/>
+                                    </svg>
+                                </label>
+                            </div>
+                        </a>
+                    </article>
 
-                <article class="restaurants--card">
-                    <a href="restaurants/alafrancaise.html" class="restaurants--card__link">
-                        <div class="restaurants--card__figure">
-                            <img class="card__figure--img" src="./assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
-                        </div>
-                        <div class="restaurants--card__description">
-                            <div class="card__description--text">
-                                <h4 class="card__title">À la française</h4>
-                                <p class="card__subtitle">Cité Rouge</p>
+                    <article class="cards">
+                        <a href="restaurants/lanoteenchantee.html" class="restaurants--card__link">
+                            <div class="restaurants--card__figure">
+                                <img class="card__figure--img" src="./assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                                <span class="card__figure--tag">Nouveau</span>
                             </div>
-                            <input type="checkbox" class="heart-checkbox" id="heartCheckbox3">
-                            <label for="heartCheckbox3">
-                                <i class="far fa-heart heart__nocheck"></i>
-                                <i class="fas fa-solid fa-heart heart__check"></i>
-                            </label>
-                        </div>
-                    </a>
-                </article>
+                            <div class="restaurants--card__description">
+                                <div class="card__description--text">
+                                    <h3 class="card__title">La note enchantée</h3>
+                                    <p class="card__subtitle">Charonne</p>
+                                </div>
+                                <input type="checkbox" class="heart-checkbox" id="heartCheckbox2">
+                                <label for="heartCheckbox2">
+                                    <i class="far fa-heart heart__nocheck"></i>
+                                    <i class="fas fa-solid fa-heart heart__check"></i>
+                                </label>
+                            </div>
+                        </a>
+                    </article>
 
-                <article class="restaurants--card">
-                    <a href="restaurants/ledelicedessens.html" class="restaurants--card__link">
-                        <div class="restaurants--card__figure">
-                            <img class="card__figure--img" src="./assets/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
-                        </div>
-                        <div class="restaurants--card__description">
-                            <div class="card__description--text">
-                                <h4 class="card__title">Le délice des sens</h4>
-                                <p class="card__subtitle">Folie-Méricourt</p>
+                    <article class="cards">
+                        <a href="restaurants/alafrancaise.html" class="restaurants--card__link">
+                            <div class="restaurants--card__figure">
+                                <img class="card__figure--img" src="./assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
                             </div>
-                            <input type="checkbox" class="heart-checkbox" id="heartCheckbox4">
-                            <label for="heartCheckbox4">
-                                <i class="far fa-heart heart__nocheck"></i>
-                                <i class="fas fa-solid fa-heart heart__check"></i>
-                            </label>
-                        </div>
-                    </a>
-                </article>
+                            <div class="restaurants--card__description">
+                                <div class="card__description--text">
+                                    <h3 class="card__title">À la française</h3>
+                                    <p class="card__subtitle">Cité Rouge</p>
+                                </div>
+                                <input type="checkbox" class="heart-checkbox" id="heartCheckbox3">
+                                <label for="heartCheckbox3">
+                                    <i class="far fa-heart heart__nocheck"></i>
+                                    <i class="fas fa-solid fa-heart heart__check"></i>
+                                </label>
+                            </div>
+                        </a>
+                    </article>
+
+                    <article class="cards">
+                        <a href="restaurants/ledelicedessens.html" class="restaurants--card__link">
+                            <div class="restaurants--card__figure">
+                                <img class="card__figure--img" src="./assets/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+                            </div>
+                            <div class="restaurants--card__description">
+                                <div class="card__description--text">
+                                    <h3 class="card__title">Le délice des sens</h3>
+                                    <p class="card__subtitle">Folie-Méricourt</p>
+                                </div>
+                                <input type="checkbox" class="heart-checkbox" id="heartCheckbox4">
+                                <label for="heartCheckbox4">
+                                    <i class="far fa-heart heart__nocheck"></i>
+                                    <i class="fas fa-solid fa-heart heart__check"></i>
+                                </label>
+                            </div>
+                        </a>
+                    </article>
+                </div>
             </section>
         </main>
 
@@ -162,7 +166,7 @@
                 </li>
 
                 <li class="footer--list__item">
-                    <a href="mailto:contact@ohmyfood.fr">
+                    <a class="footer__item--contact" href="mailto:contact@ohmyfood.fr">
                         <p class="footer__item--text">Contact</p>
                     </a>
                 </li>
