style: page restaurant

--- a/index.html
+++ b/index.html
@@ -42,22 +42,22 @@
                     <h2 class="functioning--title">Fonctionnement</h2>
                     <ol class="functioning--list">
                         <li class="functioning--list__item">
-                            <button class="functioning--button">
+                            <div class="functioning__item">
                                 <i class="fa-solid fa-mobile-screen-button"></i>
                                 <p class="functioning__item--text">Choisissez un restaurant</p>
-                            </button>
+                            </div>
                         </li>
                         <li class="functioning--list__item">
-                            <button class="functioning--button">
+                            <div class="functioning__item">
                                 <i class="fa-solid fa-list"></i>
                                 <p class="functioning__item--text">Composez votre menu</p>
-                            </button>
+                            </div>
                         </li>
                         <li class="functioning--list__item">
-                            <button class="functioning--button">
+                            <div class="functioning__item">
                                 <i class="fa-solid fa-store"></i>
                                 <p class="functioning__item--text">Dégustez au restaurant</p>
-                            </button>
+                            </div>
                         </li>
                     </ol>
                 </section>
