fix: correction suite w3c

--- a/restaurants/alafrancaise.html
+++ b/restaurants/alafrancaise.html
@@ -44,8 +44,8 @@
                             <svg class="heart" xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 23 21" fill="none">
                                 <path d="M20.3647 1.43666C18.01 -0.752399 14.5081 -0.358649 12.3468 2.07416L11.5003 3.02573L10.6538 2.07416C8.49677 -0.358649 4.99052 -0.752399 2.63583 1.43666C-0.0626076 3.94916 -0.204405 8.45854 2.21044 11.182L10.5249 20.5476C11.062 21.1523 11.9343 21.1523 12.4714 20.5476L20.7858 11.182C23.205 8.45854 23.0632 3.94916 20.3647 1.43666Z" />
                                 <defs>
-                                    <linearGradient id="paint0_linear_148695_527" x1="11.0002" y1="-5.4601" x2="3.43443" y2="27.9923" gradientUnits="userSpaceOnUse">
-                                    <stop stop-color="#9356DC"/>
+                                    <linearGradient id="paint0_linear_148695_5271" x1="11.0002" y1="-5.4601" x2="3.43443" y2="27.9923" gradientUnits="userSpaceOnUse">
+                                    <stop offset="0" stop-color="#9356DC"/>
                                     <stop offset="1" stop-color="#FF79DA"/>
                                     </linearGradient>
                                 </defs> 
@@ -58,50 +58,50 @@
 
                         <ul class="menu--section__choices">
                             <li class="menu__choice">
-                                <input type="radio" class="menu__input" id="entreeChoice1" name="entree" />
+                                <input type="radio" class="menu__input" id="entreeChoice1" name="entree">
                                 <label class="menu__label" for="entreeChoice1">
-                                    <div class="choice__description">
-                                        <h3 class="choice__title">Tartare de poulpe acidulé</h3>
-                                        <p class="choice__accompaniement">Aux zestes d'orange</p>
-                                    </div>
-                                    <div class="menu__price--and--check">
+                                    <span class="choice__description">
+                                        <span class="choice__title">Tartare de poulpe acidulé</span>
+                                        <span class="choice__accompaniement">Aux zestes d'orange</span>
+                                    </span>
+                                    <span class="menu__price--and--check">
                                         <span class="menu__price">25€</span>
-                                        <div class="menu__check">
+                                        <span class="menu__check">
                                             <i class="fa-solid fa-circle-check"></i>
-                                        </div>
-                                    </div>
+                                        </span>
+                                    </span>
                                 </label>
                             </li>
 
                             <li class="menu__choice">
-                                <input type="radio" class="menu__input" id="entreeChoice2" name="entree" />
+                                <input type="radio" class="menu__input" id="entreeChoice2" name="entree">
                                 <label class="menu__label" for="entreeChoice2">
-                                    <div class="choice__description">
-                                        <h3 class="choice__title">Velouté de légumes d'antan</h3>
-                                        <p class="choice__accompaniement">Carotte, panais, topinambour</p>
-                                    </div>
-                                    <div class="menu__price--and--check">
+                                    <span class="choice__description">
+                                        <span class="choice__title">Velouté de légumes d'antan</span>
+                                        <span class="choice__accompaniement">Carotte, panais, topinambour</span>
+                                    </span>
+                                    <span class="menu__price--and--check">
                                         <span class="menu__price">35€</span>
-                                        <div class="menu__check">
+                                        <span class="menu__check">
                                             <i class="fa-solid fa-circle-check"></i>
-                                        </div>
-                                    </div>
+                                        </span>
+                                    </span>
                                 </label>
                             </li>
 
                             <li class="menu__choice">
-                                <input type="radio" class="menu__input" id="entreeChoice3" name="entree" />
+                                <input type="radio" class="menu__input" id="entreeChoice3" name="entree">
                                 <label class="menu__label" for="entreeChoice3">
-                                    <div class="choice__description">
-                                        <h3 class="choice__title">Soupe à l'oignon</h3>
-                                        <p class="choice__accompaniement">Revisitée</p>
-                                    </div>
-                                    <div class="menu__price--and--check">
+                                    <span class="choice__description">
+                                        <span class="choice__title">Soupe à l'oignon</span>
+                                        <span class="choice__accompaniement">Revisitée</span>
+                                    </span>
+                                    <span class="menu__price--and--check">
                                         <span class="menu__price">20€</span>
-                                        <div class="menu__check">
+                                        <span class="menu__check">
                                             <i class="fa-solid fa-circle-check"></i>
-                                        </div>
-                                    </div>
+                                        </span>
+                                    </span>
                                 </label>
                             </li>
                         </ul>
@@ -112,50 +112,50 @@
 
                         <ul class="menu--section__choices">
                             <li class="menu__choice">
-                                <input type="radio" class="menu__input" id="platChoice1" name="plat" />
+                                <input type="radio" class="menu__input" id="platChoice1" name="plat">
                                 <label class="menu__label" for="platChoice1">
-                                    <div class="choice__description">
-                                        <h3 class="choice__title">Coquilles Saint-Jacques</h3>
-                                        <p class="choice__accompaniement">Accompagnées d'une purée de panais</p>
-                                    </div>
-                                    <div class="menu__price--and--check">
+                                    <span class="choice__description">
+                                        <span class="choice__title">Coquilles Saint-Jacques</span>
+                                        <span class="choice__accompaniement">Accompagnées d'une purée de panais</span>
+                                    </span>
+                                    <span class="menu__price--and--check">
                                         <span class="menu__price">40€</span>
-                                        <div class="menu__check">
+                                        <span class="menu__check">
                                             <i class="fa-solid fa-circle-check"></i>
-                                        </div>
-                                    </div>
+                                        </span>
+                                    </span>
                                 </label>
                             </li>
 
                             <li class="menu__choice">
-                                <input type="radio" class="menu__input" id="platChoice2" name="plat" />
+                                <input type="radio" class="menu__input" id="platChoice2" name="plat">
                                 <label class="menu__label" for="platChoice2">
-                                    <div class="choice__description">
-                                        <h3 class="choice__title">Magret de canard</h3>
-                                        <p class="choice__accompaniement">Et parmentier de pommes de terre</p>
-                                    </div>
-                                    <div class="menu__price--and--check">
+                                    <span class="choice__description">
+                                        <span class="choice__title">Magret de canard</span>
+                                        <span class="choice__accompaniement">Et parmentier de pommes de terre</span>
+                                    </span>
+                                    <span class="menu__price--and--check">
                                         <span class="menu__price">35€</span>
-                                        <div class="menu__check">
+                                        <span class="menu__check">
                                             <i class="fa-solid fa-circle-check"></i>
-                                        </div>
-                                    </div>
+                                        </span>
+                                    </span>
                                 </label>
                             </li>
 
                             <li class="menu__choice">
-                                <input type="radio" class="menu__input" id="platChoice3" name="plat" />
+                                <input type="radio" class="menu__input" id="platChoice3" name="plat">
                                 <label class="menu__label" for="platChoice3">
-                                    <div class="choice__description">
-                                        <h3 class="choice__title">Pigeonneau d’Ille-et-Vilaine</h3>
-                                        <p class="choice__accompaniement">Sur son lit de gnocchis aux légumes</p>
-                                    </div>
-                                    <div class="menu__price--and--check">
+                                    <span class="choice__description">
+                                        <span class="choice__title">Pigeonneau d’Ille-et-Vilaine</span>
+                                        <span class="choice__accompaniement">Sur son lit de gnocchis aux légumes</span>
+                                    </span>
+                                    <span class="menu__price--and--check">
                                         <span class="menu__price">44€</span>
-                                        <div class="menu__check">
+                                        <span class="menu__check">
                                             <i class="fa-solid fa-circle-check"></i>
-                                        </div>
-                                    </div>
+                                        </span>
+                                    </span>
                                 </label>
                             </li>
                         </ul>
@@ -166,50 +166,50 @@
 
                         <ul class="menu--section__choices">
                             <li class="menu__choice">
-                                <input type="radio" class="menu__input" id="dessertChoice1" name="dessert" />
+                                <input type="radio" class="menu__input" id="dessertChoice1" name="dessert">
                                 <label class="menu__label" for="dessertChoice1">
-                                    <div class="choice__description">
-                                        <h3 class="choice__title">Pétales de violettes glacés</h3>
-                                        <p class="choice__accompaniement">Et purée de noisettes</p>
-                                    </div>
-                                    <div class="menu__price--and--check">
+                                    <span class="choice__description">
+                                        <span class="choice__title">Pétales de violettes glacés</span>
+                                        <span class="choice__accompaniement">Et purée de noisettes</span>
+                                    </span>
+                                    <span class="menu__price--and--check">
                                         <span class="menu__price">18€</span>
-                                        <div class="menu__check">
+                                        <span class="menu__check">
                                             <i class="fa-solid fa-circle-check"></i>
-                                        </div>
-                                    </div>
+                                        </span>
+                                    </span>
                                 </label>
                             </li>
 
                             <li class="menu__choice">
-                                <input type="radio" class="menu__input" id="dessertChoice2" name="dessert" />
+                                <input type="radio" class="menu__input" id="dessertChoice2" name="dessert">
                                 <label class="menu__label" for="dessertChoice2">
-                                    <div class="choice__description">
-                                        <h3 class="choice__title">Fondant au chocolat</h3>
-                                        <p class="choice__accompaniement">Revisité</p>
-                                    </div>
-                                    <div class="menu__price--and--check">
+                                    <span class="choice__description">
+                                        <span class="choice__title">Fondant au chocolat</span>
+                                        <span class="choice__accompaniement">Revisité</span>
+                                    </span>
+                                    <span class="menu__price--and--check">
                                         <span class="menu__price">22€</span>
-                                        <div class="menu__check">
+                                        <span class="menu__check">
                                             <i class="fa-solid fa-circle-check"></i>
-                                        </div>
-                                    </div>
+                                        </span>
+                                    </span>
                                 </label>
                             </li>
 
                             <li class="menu__choice">
-                                <input type="radio" class="menu__input" id="dessertChoice3" name="dessert" />
+                                <input type="radio" class="menu__input" id="dessertChoice3" name="dessert">
                                 <label class="menu__label" for="dessertChoice3">
-                                    <div class="choice__description">
-                                        <h3 class="choice__title">Millefeuille croustillant</h3>
-                                        <p class="choice__accompaniement">Myrtilles et pâte d’amande</p>
-                                    </div>
-                                    <div class="menu__price--and--check">
+                                    <span class="choice__description">
+                                        <span class="choice__title">Millefeuille croustillant</span>
+                                        <span class="choice__accompaniement">Myrtilles et pâte d’amande</span>
+                                    </span>
+                                    <span class="menu__price--and--check">
                                         <span class="menu__price">23€</span>
-                                        <div class="menu__check">
+                                        <span class="menu__check">
                                             <i class="fa-solid fa-circle-check"></i>
-                                        </div>
-                                    </div>
+                                        </span>
+                                    </span>
                                 </label>
                             </li>
                         </ul>
