--- a/restaurants/alafrancaise.html
+++ b/restaurants/alafrancaise.html
@@ -13,17 +13,13 @@
     <body>
         <div class="container">
 
-            /** 
-            * Section du loader affiché pendant le chargement de la page.
-            */
+            <!--Section du loader affiché pendant le chargement de la page.-->
             <div class="container__loader">
                 <div class="loader__circle"></div>
                 <p class="loader__text">ohmyfood</p>
             </div>
 
-            /** 
-            * En-tête du site contenant le logo "ohmyfood" avec lien retour page Home.
-            */
+            <!--En-tête du site contenant le logo "ohmyfood" avec lien retour page Home.-->
             <header class="header">
                 <a class="backToHome" href="../index.html">
                     <svg class="backToHome__svg" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="none">
@@ -38,9 +34,7 @@
             </header>
 
             <main class="main">
-                /** 
-                * Bannière avec l'image de présentation 
-                */
+                <!--Bannière avec l'image de présentation-->
                 <div class="banner">
                     <img class="banner__img" src="../assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="alafrancaise">
                 </div>
@@ -62,9 +56,7 @@
                         </label>
                     </div>
                     
-                    /** 
-                    * Section entrées du menu 
-                    */
+                    <!--Section entrées du menu-->
                     <section class="section__menu section__menu--entrees">
                         <h2 class="menu--section__title">Entrées</h2>
 
@@ -119,9 +111,7 @@
                         </ul>
                     </section>
 
-                    /** 
-                    * Section plats du menu 
-                    */
+                    <!--Section plats du menu-->
                     <section class="section__menu section__menu--plats">
                         <h2 class="menu--section__title">Plats</h2>
 
@@ -176,9 +166,7 @@
                         </ul>
                     </section>
 
-                    /** 
-                    * Section desserts du menu 
-                    */
+                    <!--Section desserts du menu-->
                     <section class="section__menu section__menu--desserts">
                         <h2 class="menu--section__title">Desserts</h2>
 
@@ -239,9 +227,7 @@
                 </div>
             </main>
 
-            /** 
-            * Pied de page avec lien de contact.
-            */
+            <!--Pied de page avec lien de contact.-->
             <footer class="footer">
                 <div class="footer__logo">ohmyfood</div>
                 <ul class="footer--list">
