--- a/index.html
+++ b/index.html
@@ -12,17 +12,13 @@
 
     <body>
 
-            /** 
-            * Section du loader affiché pendant le chargement de la page.
-            */
+            <!--Section du loader affiché pendant le chargement de la page.-->
             <div class="container__loader">
                 <div class="loader__circle"></div>
                 <p class="loader__text">ohmyfood</p>
             </div>
 
-            /** 
-            * En-tête du site contenant le logo "ohmyfood".
-            */
+            <!--En-tête du site contenant le logo "ohmyfood".-->
             <header class="header">
                 <div class="header__logo">
                     <a href="index.html">
@@ -32,9 +28,7 @@
             </header>
 
             <main class="main">
-                /** 
-                * Section principale avec la localisation et les informations de réservation.
-                */
+                <!--Section principale avec la localisation et les informations de réservation.-->
                 <div class="location">
                     <i class="fa-solid fa-location-dot"></i>
                     <input class="location__name" type="text" id="location" name="location" placeholder="Paris, Belleville">
@@ -48,9 +42,7 @@
                     </a>
                 </section>
 
-                /** 
-                * Section expliquant le fonctionnement du service.
-                */
+                <!--Section expliquant le fonctionnement du service.-->
                 <section class="section section__functioning">
                     <div class="container container__home">
                         <h2 class="functioning--title">Fonctionnement</h2>
@@ -77,9 +69,7 @@
                     </div>
                 </section>
 
-                /** 
-                * Section présentant les différents restaurants.
-                */
+                <!--Section présentant les différents restaurants.-->
                 <section class="section section__restaurants" id="restaurants-id">
                     <div class="container container__home">
                         <h2 class="restaurants--title">Restaurants</h2>
@@ -203,9 +193,7 @@
                 </section>
             </main>
 
-            /** 
-            * Pied de page avec lien de contact.
-            */
+            <!--Pied de page avec lien de contact.-->
             <footer class="footer">
                 <div class="footer__logo">ohmyfood</div>
                 <ul class="footer--list">
